# Ancilla

./: .env.config  .env.example  .gitignore  README.md  config.py  conversation.py  defaults.example.json  defaults.json  intent_router.py  main.py  pyproject.toml
audio/: __init__.py  capture.py  wake_word.py
config/: defaults.example.json
docs/: README.md  jetson-bluetooth-speaker-ssh.md  jetson-microphones-ssh.md  jetson-speakers-ssh.md  windows-demo-next-steps.md
docs/jetson/: bluetooth-speaker-ssh.md  microphones-ssh.md  speakers-ssh.md
docs/setup/: ancilla-release-public.asc  secure-releases.md  windows-demo.md
scripts/: audio-test.sh  download-models.sh  jetson-audio-test.sh  jetson-download-models.sh  jetson-overnight-build.sh  jetson-run.sh  jetson-status.sh  jetson-uv-sync.sh  overnight-build.sh  package-jetson-release.sh  run.sh  setup-env.sh  status.sh
services/: llm_client.py  music_client.py  search_client.py  store_hours_client.py  stt_client.py  tts_client.py  weather_client.py
src/ancilla/: __init__.py  __main__.py  cli.py  config.py  intent_router.py  log_fmt.py  main.py  resource_monitor.py
src/ancilla/audio/: capture.py  wake_word.py
src/ancilla/services/: http.py  llm_client.py  music_client.py  search_client.py  store_hours_client.py  stt_client.py  tts_client.py  volume_client.py  weather_client.py  youtube_music.py
src/jetson_assistant/: __init__.py  cli.py  config.py  intent_router.py  log_fmt.py  main.py  resource_monitor.py
src/jetson_assistant/audio/: capture.py  speech_normalize.py  wake_word.py
tests/: test_tts_stream.py
(+11 files in other folders)
