[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ancilla"
version = "0.1.0"
description = "Ancilla - local-first voice assistant for Jetson Orin Nano, Raspberry Pi, and Linux"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "python-dotenv",
  "requests",
  "sounddevice",
  "scipy",
  "torch",
  "torchaudio",
  "openwakeword>=0.6.0",
  "piper-tts>=1.4.2",
  "onnxruntime>=1.27.0",
  "ddgs",
  "tzdata",
  "opening-hours-py>=1.4.0",
  "psutil",
  "yt-dlp>=2026.7.4",
]

[project.scripts]
ancilla = "ancilla.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
